puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Department.Shell/content/Controllers/Department/DepartmentController.cs.pp
namespace $rootnamespace$.Controllers.Department
{
    using System.Web.Mvc;
    using Core.Interfaces.Service;

    public class DepartmentController : Controller
    {
        protected IDepartmentService DepartmentService;
        public DepartmentController(IDepartmentService service)
        {
            DepartmentService = service;
        }

        public ActionResult Categories()
        {
            return View();
        }
    }
}
